service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service
spec:
  type: NodePort
  selector:
    app: greeting
  ports:
    - port: 80      
      targetPort: 5000
