ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: greeting-service
            port:
              number: 80
